k8s/go-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librorum
  namespace: librorum
  labels:
    app: librorum
spec:
  replicas: 1
  selector:
    matchLabels:
      app: librorum
  template:
    metadata:
      labels:
        app: librorum
    spec:
      imagePullSecrets:
        - name: ghcr-pull

      containers:
        - name: librorum
          image: librorum-image
          imagePullPolicy: Always
          volumeMounts:
            - name: librorum-data
              mountPath: /app/data
          resources:
            requests:
              memory: "12Mi"
              cpu: "2m"
          ports:
            - name: http
              containerPort: 4545
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: 4545
          livenessProbe:
            httpGet:
              path: /healthz
              port: 4545
      volumes:
        - name: librorum-data
          emptyDir: {}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
