k8s/go-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: librorum
  namespace: librorum
spec:
  type: ClusterIP
  selector:
    app: librorum
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
