k8s/app.yaml
apiVersion: apps/v1
kind: Deployment

---
apiVersion: v1
kind: Service

---
apiVersion: v1
kind: Ingress
