k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: librorum
  namespace: librorum
spec:
  ingressClassName: traefik
  rules:
    - host: librorum.citadella.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: librorum
                port:
                  number: 80
